<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:padding="0dp"
        android:contentDescription="@string/my_logo"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:hint="@string/enter_first_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textCapSentences"
        android:drawableLeft="@drawable/ic_baseline_account_box_white"
        android:ems="9"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:hint="@string/enter_surname"
        android:textColorHint="@color/white"
        android:inputType="textCapSentences"
        android:layout_alignParentRight="true"
        android:ems="8"
        />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:hint="@string/enter_email_address"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_white"
        />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:layout_below="@id/email_address"
        android:hint="@string/enter_date_of_birth"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_baseline_date_range_white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"
        android:drawableLeft="@drawable/ic_baseline_phone_white"
        />

    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:layout_toRightOf="@id/phone"
        android:backgroundTint="@color/white"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:layout_below="@id/phone"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="9"
        android:drawableLeft="@drawable/ic_baseline_password_white"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:layout_below="@id/phone"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:ems="8"/>

    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:text="@string/accept_terms_and_conditions"
        android:checked="true"
        android:textColor="@color/white"
        android:onClick="showToast"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:textColor="@color/teal_700"
        android:onClick="createAccount"
        />
</RelativeLayout>